--- a/AAInfo/AAInfo.csproj
+++ b/AAInfo/AAInfo.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="debugMain.cs" />
+    <Compile Include="Email.cs" />
     <Compile Include="ErrorReporter.cs" />
     <Compile Include="frmAbout.cs">
       <SubType>Form</SubType>
