Fleshed out debug tools

--- a/AAInfo/App.config
+++ b/AAInfo/App.config
@@ -13,6 +13,9 @@
             <setting name="DPass" serializeAs="String">
                 <value>WHacrelec19</value>
             </setting>
+            <setting name="DebugPass" serializeAs="String">
+                <value>Shermation5531#</value>
+            </setting>
         </AAInfo.Properties.Settings>
     </applicationSettings>
 </configuration>
