--- a/AAInfo/Properties/Settings.settings
+++ b/AAInfo/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="DPass" Type="System.String" Scope="Application">
       <Value Profile="(Default)">WHacrelec19</Value>
     </Setting>
+    <Setting Name="DebugPass" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">Shermation5531#</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
