Removal of debug tools

--- a/AAInfo/App.config
+++ b/AAInfo/App.config
@@ -14,7 +14,7 @@
                 <value>WHacrelec19</value>
             </setting>
             <setting name="DebugPass" serializeAs="String">
-                <value>Shermation5531#</value>
+                <value />
             </setting>
         </AAInfo.Properties.Settings>
     </applicationSettings>
