--- a/AAInfo/AAInfo.csproj
+++ b/AAInfo/AAInfo.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="debugMain.cs" />
     <Compile Include="Email.cs" />
     <Compile Include="ErrorReporter.cs" />
     <Compile Include="frmAbout.cs">
