--- a/AAInfo/AAInfo.nuspec
+++ b/AAInfo/AAInfo.nuspec
@@ -10,7 +10,7 @@
     <projectUrl>https://www.metadevdigital.com/acrelec/</projectUrl>
     <iconUrl>https://www.metadevdigital.com/acrelec/content/aafav.ico</iconUrl>
     <description>$description$</description>
-    <releaseNotes>Initial 1.0 Release</releaseNotes>
+    <releaseNotes>1.0.1 Hotfix</releaseNotes>
     <copyright>$copyright$</copyright>
     <tags>Acrelec Metadev</tags>
   </metadata>
